--- a/public/web/css/style.css
+++ b/public/web/css/style.css
@@ -4168,3 +4168,13 @@ body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu li.active ul.dropdown-men
 .f-right {
     float: right;
 }
+
+/* Welcome */
+.main-content2 {
+    padding: 80px 30px 0px 0px;
+    width: 100% !important;
+}
+.main-footer2 {
+    padding-top: 50%;
+    
+}
