--- a/public/web/css/style.css
+++ b/public/web/css/style.css
@@ -4175,6 +4175,7 @@ body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu li.active ul.dropdown-men
     width: 100% !important;
 }
 .main-footer2 {
-    padding-top: 50%;
+    padding: auto 30px 0px 0px;
+    
     
 }
