--- a/public/web/css/style.css
+++ b/public/web/css/style.css
@@ -4170,7 +4170,13 @@ body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu li.active ul.dropdown-men
 }
 
 /* Welcome */
-.main-content2 {
+/* .main-content2 {
     padding: 80px 30px 0px 0px;
     width: 100% !important;
+} */
+/* .section-body {
+    background: linear-gradient(to botton, rgb(0, 76, 162), rgb(44,84,131)) ;
 }
+.card-body {
+    background: linear-gradient(to botton, rgb(0, 76, 162), rgb(44,84,131)) ;
+} */
