--- a/public/web/css/style.css
+++ b/public/web/css/style.css
@@ -4170,6 +4170,15 @@ body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu li.active ul.dropdown-men
 }
 
 /* Welcome */
+
+.q_somos {
+    background-image: linear-gradient(to bottom, rgba(58, 144, 243, 0.8), rgba(172, 207, 252, 0.8)),url('catfront.png') !important;  
+}
+
+
+
+
+
 /* .main-content2 {
     padding: 80px 30px 0px 0px;
     width: 100% !important;
