--- a/public/web/css/style.css
+++ b/public/web/css/style.css
@@ -54,7 +54,7 @@
 /* 3. Bootstrap Override */
 /* 3.1 Misc */
 @import url("//fonts.googleapis.com/css?family=Nunito:400,600,700,800");
-
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Nunito+Sans&display=swap');
 .btn:focus,
 .btn:active,
 .btn:active:focus,
